# nrtf

./: .dockerignore  .gitignore  CLAUDE.md  PROJECT_PIPELINE_OVERVIEW.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.json  settings.local.json
.claude/agents/: ai-engineer.md  backend-engineer.md  computer-vision-engineer.md  data-engineer.md  document-intelligence-engineer.md  edge-ai-optimizer.md  energy-domain-engineer.md  frontend-designer.md  ml-engineer.md
.claude/commands/: co2-baseline.md  cv-experiment.md  extract-bills.md  heat-recovery-scan.md  install-all.md  lock-project.md  new-feature.md  normalize-units.md  post-leak-pivot.md  profile-edge.md  quantize-model.md
apps/ai-agents/: .env.example  README.md  package.json  pyproject.toml  requirements.txt  tsconfig.json
apps/ai-agents/src/: server.ts
apps/ml-pipeline/: .env.example  PIPELINE.md  README.md  package.json  pyproject.toml  requirements.txt  run_ml_pipeline.ipynb  tsconfig.json
apps/ml-pipeline/notebooks/: run_ml_pipeline_final.ipynb
apps/ml-pipeline/reports/eda/: index.html  summary.csv
apps/ml-pipeline/reports/eval/: anomaly_leaderboard.csv  forecaster_leaderboard.csv  index.html
apps/ml-pipeline/src/: server.ts
apps/ml-pipeline/src/data/: README.md  clean_tri_gen.py  inspect_tri_gen.py
apps/ml-pipeline/src/eda/: run_eda.py
apps/ml-pipeline/src/evaluation/: evaluate.py
apps/ml-pipeline/src/features/: build_features.py
apps/ml-pipeline/src/training/: metrics.py  split.py  train_anomaly.py  train_forecaster.py
apps/ml-pipeline/src/utils/: io.py  time_features.py
data/: README.md
docs/: model-and-preprocessing-decisions.md
models/: README.md
notebooks/: README.md  WHR_Framework_v2_Engineering.html  whr_integration.html
(+285 files in other folders)
