[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrtf-ml-pipeline"
version = "0.1.0"
description = "ML training + inference pipeline for NRTF (Chronos, PINNs, NILM, TinyML)"
requires-python = ">=3.11"
authors = [{ name = "NRTF Team", email = "talel.boussetta@insat.ucar.tn" }]
license = { text = "Private" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
